# MatrixLibrary

./: CMakeLists.txt  Doxyfile  README.md  build.sh  build_benchmarking.sh  build_testing.sh  matrix.cpp
.github/workflows/: build.yml
benchmarking/: benchmark_accessor.cpp  benchmark_addition.cpp  benchmark_eigsym.cpp  benchmark_initialization.cpp  benchmark_multiplication.cpp  benchmark_transpose.cpp  graphing.py
docs/html/: annotated.html  benchmark_8hpp_source.html  classInvalidMatrixSize-members.html  classInvalidMatrixSize.html  classInvalidMatrixSize__inherit__graph.dot  classMatrix-members.html  classMatrix.html  classes.html  custom__exception_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  helper__func_8cpp_source.html  helper__func_8hpp_source.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherits.html  matrix_8h_source.html  print__vec_8hpp_source.html  structEigsymResult-members.html  structEigsymResult.html  structEigsymResult__coll__graph.dot  structQLEigenResult-members.html  structQLEigenResult.html  structQLEigenResult__coll__graph.dot  structTridiagonalResult-members.html  structTridiagonalResult.html  structTridiagonalResult__coll__graph.dot
docs/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  pages_0.js  searchdata.js
include/: custom_exception.hpp  helper_func.hpp  matrix.h  print_vec.hpp
src/: Matrix.hpp  benchmark.cpp  custom_exception.cpp  main.cpp  matrix.cpp  matrix_basic_func.cpp  matrix_eigendecomp.cpp  matrix_operators.cpp  matrix_utilfuncs.cpp
test/: benchmark_eigsym_accuracy.cpp  test_helpers.hpp  test_matrix.cpp  test_matrix_arithmetic.cpp  test_matrix_basics.cpp  test_matrix_eigsym.cpp
